Updates from Overleaf

--- a/latex/predicting_lg_RO.tex
+++ b/latex/predicting_lg_RO.tex
@@ -104,6 +104,20 @@
 \maketitle
 \thispagestyle{empty}
 
+
+
+\begin{abstract}
+\doublespacing
+\normalsize
+
+There are more than 7,000 languages on our planet today, but they are not evenly distributed over the population. For example, there are over 100 languages in Vanuatu but only one in S\={a}moa, despite the populations being plausibly similar historically. Why might this be? This paper explores this question for one particular region: Remote Oceania.
+Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Caledonia, Fiji, Polynesia and Micronesia. The region was settled more recently than the rest of Oceania (3,500 years ago) and entirely by Austronesian speakers. Through studies in archaeology, history and linguistics much is known of migration patterns and societal organisation. The comparatively shallow time depth, relatedness of the languages and established knowledge about the history of this region make it an ideal base for understanding language diversification. This study considers environmental, archaeological and societal variables and their statistical relationship to the number of languages per island group. Of these factors, political complexity, time depth and island size significantly explain the variation. The impact of political complexity is probably due to the fact that more hierarchical societies led to more interactions and cohesion over large distances, which reduced language splitting.
+
+%Scholars have suggested several reasons for the large discrepancy between the number of languages per island group in Remote Oceania, such as societal organisation, environmental factors and settlement time. 
+
+
+\end{abstract}
+
 \newpage
 
 
