Updates from Overleaf

--- a/latex/predicting_lg_RO.tex
+++ b/latex/predicting_lg_RO.tex
@@ -111,7 +111,7 @@
 \normalsize
 
 There are more than 7,000 languages on our planet today, but they are not evenly distributed over the population. For example, there are over 100 languages in Vanuatu but only one in S\={a}moa, despite the populations being plausibly similar historically. Why might this be? This paper explores this question for one particular region: Remote Oceania.
-Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Caledonia, Fiji, Polynesia and Micronesia. The region was settled more recently than the rest of Oceania (3,500 years ago) and entirely by Austronesian speakers. Through studies in archaeology, history and linguistics much is known of migration patterns and societal organisation. The comparatively shallow time depth, relatedness of the languages and established knowledge about the history of this region make it an ideal base for understanding language diversification. This study considers environmental, archaeological and societal variables and their statistical relationship to the number of languages per island group. Of these factors, political complexity, time depth and island size significantly explain the variation. The impact of political complexity is probably due to the fact that more hierarchical societies led to more interactions and cohesion over large distances, which reduced language splitting.
+Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Caledonia, Fiji, Polynesia and Micronesia. The region was settled more recently than the rest of Oceania (3,500 years ago) and entirely by Austronesian speakers. Through studies in archaeology, history and linguistics much is known of migration patterns and societal organization. The comparatively shallow time depth, the relatedness of the languages and established knowledge about the history of this region make it an ideal base for understanding language diversification. This study considers environmental, archaeological and societal variables and their statistical relationship to the number of languages per island group. Of these factors, political complexity, time depth and island size significantly explain the variation. The impact of political complexity is probably due to the fact that more hierarchical societies led to more interactions and cohesion over large distances, which reduced language splitting.
 
 %Scholars have suggested several reasons for the large discrepancy between the number of languages per island group in Remote Oceania, such as societal organisation, environmental factors and settlement time. 
 
@@ -147,7 +147,7 @@ Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Cale
 %\doublespacing
 Why are there more languages in some places than others? The number of languages of the world are not equally distributed over its population. In Papua New Guinea, there are 835 languages for a population of 7 million people \citep{ethnologue22, cia_world_factbook_2019}. However, in South Korea there are only two indigenous spoken languages in a population of 51 million people. The function of language is the same across the world, so how could this be?
 
-Understanding the mechanics of language change and diversification is essential to understanding human history. It is the story of how languages, and therefore also communities, become separated from each other. This research topic has received a lot of attention in recent years (c.f. \citet{gavin2017process,  greenhill2015demographic, Pacheco_Coelho_2019, hua2019ecological}), and in this chapter we will take a closer look at Remote Oceania. 
+Understanding the mechanics of language change and diversification is essential to understanding human history. It is the story of how languages, and therefore also communities, become separated from each other. This research topic has received a lot of attention in recent years (c.f. \citet{gavin2017process,  greenhill2015demographic, Pacheco_Coelho_2019, hua2019ecological}), and in this study we will take a closer look specifically at Remote Oceania. 
 
 Fig.~\ref{RO_overnight_coloured_dots} shows islands of Oceania. Languages are points, coloured by language family. In the Polynesian islands (S\={a}moa, Tonga, Rarotonga, Tokelau etc) there is generally one language per island group. However, Melanesian Remote Oceania (Vanuatu, Temotu, Fiji and Kanaky (New Caledonia)) have many more languages, sometimes up to 20 languages on the very same island. What explains this difference?
 %What are the mechanics of this?
@@ -187,15 +187,14 @@ This chapter tests this hypothesis by constructing a model where we try to predi
  
 \subsection{Previous research}
 \label{nonlingfactors}
-Linguists, anthropologists and scholars of other fields have long remarked on the link between linguistic diversity and political structure in Remote Oceania. One of the oldest examples of this observation is Turner who travelled in the region 1861-1884 and hypothesised that the lack of regional variation within S\={a}moan entailed that they had long had a more centralised government \citep[172]{turner1884}.
+Linguists, anthropologists and scholars of other fields have long remarked on the link between linguistic diversity and political structure in Remote Oceania. One of the oldest examples of this observation is Turner who traveled in the region 1861-1884 and hypothesized that the lack of regional variation within S\={a}moan entailed that they had long had a more centralized government \citep[172]{turner1884}. Linguists have linked types of societal organization to diversification processes. Language change is embedded in social structure (c.f. \citep{WLH1968}), or as \citet[124]{grace_1992_aberrant} writes: \emph{linguistic similarities and differences [are] reflections of community structures}. We would therefore expect that differences in social organisation lead to differences in linguistic homogeneity and change. \citet{pawley81, pawley2007} discusses the specific hypothesis that while Western Polynesia and ``Melanesian'' Remote Oceania (Vanuatu, Temotu, Fiji and New Caledonia) were settled in similar ways by Austronesian speaking people, and at comparable time depths, and developed similarly immediately after first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long distance voyaging in Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the rate by which it progressed differed.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of diversification was slower than in Vanuatu and New Caledonia.
+
+
 
 %\begin{quotation} 
 %\noindent \emph{To anyone acquainted with the aborigines of various parts of the world, and especially those of the Papuan groups in Western Polynesia [sic], the simple fact that S\={a}moans had but one dialect, and free intercourse with each other all over the group is proof positive that there must have long existed there some system of government.} \citep[172]{turner1884}\footnote{\citet[8]{moselhovdhaugen1992} in their reference grammar of Samoan also propose that the lack of regional diversity within the language is due to the extensive social networks and linking of different regions. More on this in chapter \ref{chapter_samoan_var}.} \end{quotation}
 
-The anthropologist \citet{sahlins63}, in his much-cited paper `Poor man, Rich Man, Big-Man, Chief: Political Types in Melanesia and Polynesia', contrasts Melanesian ``underdeveloped [egalitarian] polities'' with the Polynesian ``developed\footnote{This paper was written at a time where it was common to describe cultures as existing on unidirectional scales, and to make unscientific value judgements related to positions on this scale. Some of the statements in this paper reflect this academic culture which is, fortunately, passé.} [stratified] polities''. He describes Melanesian societies as consisting of many unintegrated and equal autonomous segments; communities are made up of many households which are largely independent from each other. This is in contrast to Polynesian communities which are described as more pyramidical in structure; households are related to each other by rank and collaborate on matters such as food production. Sahlins recognises that there is variation within Melanesia and Polynesia, and describes New Caledonia and Fiji as transition zones. He underlines the consequences these different kinds of political organisation have for economy and the history of contact with European powers.% but does not make overt explicit inferences to how they relate to cultural and linguistic diversity and disparity.
-
-
-Linguists have linked these ideas of different societal structures to questions of language diversity and disparity. Language change is embedded in social structure (c.f. \citep{WLH1968}), or as \citet[124]{grace_1992_aberrant} writes: \emph{linguistic similarities and differences [are] reflections of community structures}. We would therefore expect that differences in social organisation lead to differences in linguistic homogeneity and change. \citet{pawley81, pawley2007} discusses the specific hypothesis that while Western Polynesia and Melanesian Remote Oceania (Vanuatu, Temotu Fiji and New Caledonia) were settled in similar ways by Austronesian speaking people, and at comparable time depths, and developed similarly immediately after first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long distance voyaging in Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the rate by which it progressed differed.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of diversification was slower than in Vanuatu and New Caledonia.
+%The anthropologist \citet{sahlins63}, in his much-cited paper `Poor man, Rich Man, Big-Man, Chief: Political Types in Melanesia and Polynesia', contrasts Melanesian ``underdeveloped [egalitarian] polities'' with the Polynesian ``developed\footnote{This paper was written at a time where it was common to describe cultures as existing on unidirectional scales, and to make unscientific value judgements related to positions on this scale. Some of the statements in this paper reflect this academic culture which is, fortunately, passé.} [stratified] polities''. He describes Melanesian societies as consisting of many unintegrated and equal autonomous segments; communities are made up of many households which are largely independent from each other. This is in contrast to Polynesian communities which are described as more pyramidical in structure; households are related to each other by rank and collaborate on matters such as food production. Sahlins recognises that there is variation within Melanesia and Polynesia, and describes New Caledonia and Fiji as transition zones. He underlines the consequences these different kinds of political organisation have for economy and the history of contact with European powers.% but does not make overt explicit inferences to how they relate to cultural and linguistic diversity and disparity.
 
 This diversification process has two stages. First, there are similar sequences of rapid expansion over the entire island group, and sparse settlement with trade and marriages between different sister communities. Second, there is denser settlement associated with localised trade and marriage practices between sister communities, more intensive agriculture and weakening of kin ties and linguistic divergence. The following quote from \citet{pawley2007} summarises a few of these points and links them to political organisation:
 
