Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -9,6 +9,8 @@
   publisher={The Royal Society London}
 }
 
+
+
 @article{holland2020accuracy,
   title={Accuracy of ancestral state reconstruction for non-neutral traits},
   author={Holland, Barbara R and Ketelaar-Jones, Saan and o’Mara, Aidan R and Woodhams, Michael D and Jordan, Gregory J},
@@ -5604,3 +5606,9 @@ Scripts},
   url = {https://asdar-book.org/},
 }
 
+@book{mcelreath2020statistical,
+  title={Statistical rethinking: A Bayesian course with examples in R and Stan},
+  author={McElreath, Richard},
+  year={2020},
+  publisher={CRC press}
+}
