--- a/latex/predicting_lg_RO.tex
+++ b/latex/predicting_lg_RO.tex
@@ -187,25 +187,31 @@ This study tests this hypothesis by constructing a model where we try to predict
  
 \subsection{Previous research}
 \label{nonlingfactors}
-Linguists, anthropologists and scholars of other fields have long remarked on the link between linguistic diversity and political structure in Remote Oceania. One of the oldest examples of this observation is Turner who traveled in the region 1861-1884 and hypothesized that the lack of regional variation within S\={a}moan entailed that they had long had a more centralized government \citep[172]{turner1884}. Linguists have linked types of societal organization to diversification processes. Language change is embedded in social structure (c.f. \citep{WLH1968}), or as \citet[124]{grace_1992_aberrant} writes: \emph{linguistic similarities and differences [are] reflections of community structures}. We would therefore expect that differences in social organisation lead to differences in linguistic homogeneity and change. \citet{pawley81, pawley2007} discusses the specific hypothesis that while Western Polynesia and ``Melanesian'' Remote Oceania (Vanuatu, Temotu, Fiji and New Caledonia) were settled in similar ways by Austronesian speaking people, and at comparable time depths, and developed similarly immediately after first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long distance voyaging in Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the rate by which it progressed differed.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of diversification was slower than in Vanuatu and New Caledonia.
+Linguists, anthropologists and scholars of other fields have long remarked on the link between linguistic diversity and political structure in Remote Oceania. One of the oldest examples of this observation is Turner who traveled in the region 1861-1884 and hypothesized that the lack of regional variation \emph{within} S\={a}moan entailed that they had long had a more centralized government \citep[172]{turner1884}. Linguists have linked types of societal organization to diversification processes. Language change is embedded in social structure (c.f. \citep{WLH1968}), or as \citet[124]{grace_1992_aberrant} writes: \emph{linguistic similarities and differences [are] reflections of community structures}. As community ties weaken and what was once one network splits in twain, we expect that this is reflected in language variation as well.
 
+\citet{pawley81, pawley2007} discusses the specific hypothesis that while Western Polynesia and ``Melanesian'' Remote Oceania (Vanuatu, Temotu, Fiji and New Caledonia) were settled in similar ways by Austronesian speaking people, and at comparable time depths, and developed similarly immediately after first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long-distance voyaging in the island groups of Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the \emph{rate} by which it progressed differed and that this is the cause for the variation we see today.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of cultural diversification was slower than in Vanuatu and New Caledonia. The following quote from \citet{pawley2007} summarises a few of these points and links them to political organisation:
 
-
-%\begin{quotation} 
-%\noindent \emph{To anyone acquainted with the aborigines of various parts of the world, and especially those of the Papuan groups in Western Polynesia [sic], the simple fact that S\={a}moans had but one dialect, and free intercourse with each other all over the group is proof positive that there must have long existed there some system of government.} \citep[172]{turner1884}\footnote{\citet[8]{moselhovdhaugen1992} in their reference grammar of Samoan also propose that the lack of regional diversity within the language is due to the extensive social networks and linking of different regions. More on this in study \ref{study_samoan_var}.} \end{quotation}
-
-%The anthropologist \citet{sahlins63}, in his much-cited paper `Poor man, Rich Man, Big-Man, Chief: Political Types in Melanesia and Polynesia', contrasts Melanesian ``underdeveloped [egalitarian] polities'' with the Polynesian ``developed\footnote{This paper was written at a time where it was common to describe cultures as existing on unidirectional scales, and to make unscientific value judgements related to positions on this scale. Some of the statements in this paper reflect this academic culture which is, fortunately, passé.} [stratified] polities''. He describes Melanesian societies as consisting of many unintegrated and equal autonomous segments; communities are made up of many households which are largely independent from each other. This is in contrast to Polynesian communities which are described as more pyramidical in structure; households are related to each other by rank and collaborate on matters such as food production. Sahlins recognises that there is variation within Melanesia and Polynesia, and describes New Caledonia and Fiji as transition zones. He underlines the consequences these different kinds of political organisation have for economy and the history of contact with European powers.% but does not make overt explicit inferences to how they relate to cultural and linguistic diversity and disparity.
-
-This diversification process has two stages. First, there are similar sequences of rapid expansion over the entire island group, and sparse settlement with trade and marriages between different sister communities. Second, there is denser settlement associated with localised trade and marriage practices between sister communities, more intensive agriculture and weakening of kin ties and linguistic divergence. The following quote from \citet{pawley2007} summarises a few of these points and links them to political organisation:
+%This diversification process has two stages. First, there are similar sequences of rapid expansion over the entire island group, and sparse settlement with trade and marriages between different sister communities. Second, there is denser settlement associated with localised trade and marriage practices between sister communities, more intensive agriculture and weakening of kin ties and linguistic divergence. 
 
 \begin{quotation}
 \noindent \emph{In [Fiji and West Polynesia] the maintenance of long distance voyaging, both within island groups and between neighbouring island groups, can be attributed in large part to the rise of powerful chiefs. These chiefs had political, economic and social motives for maintaining long distance connections and were able to use their authority to drive the production of a food surplus which in turn could be used to support specialist craftsmen who could, among other things, build and sail large ocean-going canoes.} \citep[28]{pawley2007} \end{quotation}
 
-In a similar vein, \citet{curriemace2009} show that more stratified societies are correlated with larger language areas among languages of Africa and Eurasia. This can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reduce diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. 
+This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acyclic Graph (DAG, c.f. \cite{mcelreath2020statistical}. Figure \ref{Predicting_lgs_DAG_andy} contains such a graph, based on the author's interpretation of Pawley's proposal.
 
-Other scholars, for example \citet[104]{lynch1981melanesian}, have stressed the relevance of contact with non-Austroneisan Melanesian communities (also known as ``Papuan'')\footnote{People in Melanesia who are not Austronesian speakers are commonly labelled ``Papuan'' in academic literature and I will follow that convention throughout this thesis. ``Papuan'' is used as shorthand for ``non-Austronesian speaking person from Melanesia''. I want to underline that the label ``Papuan'' in this particular case refers specifically to people originating from the Bismarck archipelago, and not from, for example, the highlands of New Guinea. The category ``Papuan'' is overly broad, as it encompasses large populations over a vast geographical area.} for understanding the distribution of language diversity in Remote Oceania. This theory suggests that we should not only consider internal political structure as a factor, but also include external contact with Papuan groups. Lynch puts forward evidence of ancient language mixing where Austronesian languages of Temotu, New Caledonia and Vanuatu shared characteristics of non-Austronesian languages further west. 
+\begin{figure}[ht]
+\centering
+\includegraphics[width=16cm]{illustrations/Predicting_lgs_DAG_andy.png}
+\caption{Directed Acyclic Graph of the argument presented in \cite{pawley2007}. Blue = variable to be predicted (response).}
+\label{Predicting_lgs_DAG_andy}
+\end{figure}
 
-Recent studies of ancient DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of influx of genes that are associated with origins in non-Austronesian speaking communities of Near Oceania into Vanuatu. These results from studies of ancient genomes lend support to the hypothesis that contact between Austronesian and Papuan people in ancient times could have impacted the differences in language diversification rates that we see in the region. However, there is not enough data for this to be included as a factor in the analysis of this study.
+In a similar vein, we have the proposal by \citet{curriemace2009} that more stratified societies are correlated with larger language areas among languages of Africa and Eurasia. If one language covers a large area, then the number of languages per square kilometer is lower than otherwise --- the language density is lower. Their research can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reduce diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. 
+
+Returning to Oceania; \citet[104]{lynch1981melanesian} have stressed the relevance of contact with non-Austroneisan communities from New Guinea, Bismarck, Bougainville and Solomon Islands as a key factor in explaining why there are more Oceanic languages per island group in those regions and in Vanuatu compared to the rest of Oceania \footnote{\citet{lynch1981melanesian} uses the terms ``Papuan'' and contrasts Melanesia and Polynesia. I have chosen to summarise him here in more precise terms in relation to how his work impacts the current study. He writes specifically about the influence from languages of New Britain, Bougainville, central Solomon Islands, Manus and the southeast of New Guinea mainland (Oro province, Milne Bay province and National Capital District) on Oceanic languages of those regions and in Temotu.}. Lynch does not offer a precise account but outlines several different potential scenarios whereby contact with non-austronesian groups caused greater diversification among Oceanic languages.
+
+%mailu, daga, b Binandere east ppua (new britain, bougainville and sol,oms, manus oro province, milne bay
+
+Recent studies of ancient DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of genes that are associated with origins in non-Austronesian speaking communities of Near Oceania into Vanuatu. These results from studies of ancient genomes lend support to the hypothesis that contact between Austronesian and Papuan people in ancient times could have impacted the differences in language diversification rates that we see in the region. However, unfortunately, there is not enough data for this to be included as a factor in the analysis of this study but it may be approximated by proxy-variables such as time depth of settlement
 
 
 %\emph{\textcolor{red}{(Note to Andy, Simon, Mark and Nick: it is possible to include Papuan contact as a rather granular variable in the analysis. I have tried running a variable that just classifies each island group as "Melanesian" or "Not Melanesian" for example. That variable did not come out as significantly predicting the language diversity. It also felt a bit too crude. I talked to Beth about it and she recommended me to leave it out. However, if you would like I can keep it in and give caveats. I don't know yet of any DNA study that I can use for this. Both Posth et al and Lipson et al don't sample New Caledonia or Fiji at all, which makes it tricky to use here.)}}
@@ -708,7 +714,7 @@ In the next study we explore the disparity of languages of Remote Oceania, how d
 \newpage
 \singlespacing
 \bibliographystyle{unified_edit_HS_SFM}
-\bibliography{hsz_out}
+\bibliography{latex/HS_Oceanic}
 %\singlespacing
 
 
